--- a/README.Rmd
+++ b/README.Rmd
@@ -47,15 +47,20 @@ sig_create_database('./my_sig_database.sqlite', overwrite = TRUE)
 2. Run Signature Analysis
 
 ```{r, eval = FALSE}
+# Variant Files
 path_maf <-  system.file(package = "sigminerUtils", path = "test.maf") 
 path_copynumber <- system.file(package = "sigminerUtils", path = "test.copynumber.csv") 
 path_sv <- system.file(package = "sigminerUtils", path = "test.sv.csv") 
+
+# Database of reference of sample catalogues
+path_reference_tallies <- system.file(package = "sigminerUtils", path = "reference/refmatrix.tally.parquet")
 
 sig_analyse_mutations(
   maf = path_maf, 
   copynumber = read.csv(path_copynumber),
   structuralvariant = read.csv(path_sv),
-  ref = "hg19"
+  ref = "hg19", 
+  ref_tallies = path_reference_tallies,
   )
 ```
 
