--- a/README.Rmd
+++ b/README.Rmd
@@ -73,6 +73,8 @@ sig_create_reference_set(
 
 ``
 4. Use reference matrix to rerun your signature analysis
+
+Using a reference matrix allows samples to be compared to a reference database
 ```{r}
 # Variant Files
 path_maf <-  system.file(package = "sigminerUtils", path = "test.maf") 
@@ -87,9 +89,9 @@ sig_analyse_mutations(
   copynumber = read.csv(path_copynumber),
   structuralvariant = read.csv(path_sv),
   ref = "hg19", 
-  ref_tallies = path_reference_tallies
+  ref_tallies = path_reference_tallies,
   output_dir = "./signatures"
-  )
+)
 
 ```
 
