--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,9 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/sigminerUtils)](https://CRAN.R-project.org/package=sigminerUtils)
 [![Codecov test coverage](https://codecov.io/gh/selkamand/sigminerUtils/branch/master/graph/badge.svg)](https://app.codecov.io/gh/selkamand/sigminerUtils?branch=master)
 [![R-CMD-check](https://github.com/selkamand/sigminerUtils/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/selkamand/sigminerUtils/actions/workflows/R-CMD-check.yaml)
+![GitHub Issues or Pull Requests](https://img.shields.io/github/issues-closed/selkamand/sigminerUtils)
+[![code size](https://img.shields.io/github/languages/code-size/selkamand/sigminerUtils.svg)](https://github.com/selkamand/sigminerUtils)
+![GitHub last commit](https://img.shields.io/github/last-commit/selkamand/sigminerUtils)
 <!-- badges: end -->
 
 
