--- a/README.Rmd
+++ b/README.Rmd
@@ -51,6 +51,8 @@ library(sigminerUtils)
 
 ### Run in Single Sample Mode from Oncoanalyser outputs
 
+sigminerUtils was primarily designed to support mutation files (SNV, SV, Copynumber files) output by [oncoanalyser](https://github.com/nf-core/oncoanalyser).
+
 ```{r include=FALSE}
 
 # Ensure folders we are going to create don't already exist
@@ -61,16 +63,20 @@ unlink("colo829_signature_results_with_refset", recursive = TRUE)
 
 ```
 
-```{r, eval = FALSE}
+```{r include=FALSE}
 path_snvs <- system.file("colo829_testfiles/COLO829v003T.purple.somatic.vcf.gz", package = "sigminerUtils")
 path_cnvs <- system.file("colo829_testfiles/COLO829v003T.purple.cnv.somatic.tsv", package = "sigminerUtils")
 path_svs <-  system.file("colo829_testfiles/COLO829v003T.purple.sv.vcf.gz", package = "sigminerUtils")
 
 sig_analyse_mutations_single_sample_from_files(
-  sample_id = "COLO829v003T", vcf_snv = path_snvs, segment = path_cnvs, vcf_sv = path_svs,
+  sample_id = "COLO829v003T", 
+  vcf_snv = path_snvs, 
+  segment = path_cnvs, 
+  vcf_sv = path_svs,
   include = "pass",
   ref = "hg38",
-  output_dir = "colo829_signature_results"
+  cores = 4,
+  output_dir = "colo829_signature_results",
 )
 ```
 
@@ -125,7 +131,7 @@ sig_create_reference_set(
 
 Once a reference set has been produced, it can be used in any single sample / cohort analysis to produce additional outputs (umap_plot data + similar sample analysis)
 
-```{r}
+```{r include=FALSE}
 path_snvs <- system.file("colo829_testfiles/COLO829v003T.purple.somatic.vcf.gz", package = "sigminerUtils")
 path_cnvs <- system.file("colo829_testfiles/COLO829v003T.purple.cnv.somatic.tsv", package = "sigminerUtils")
 path_svs <-  system.file("colo829_testfiles/COLO829v003T.purple.sv.vcf.gz", package = "sigminerUtils")
@@ -141,6 +147,7 @@ sig_analyse_mutations_single_sample_from_files(
   include = "pass",
   ref = "hg38",
   output_dir = "colo829_signature_results_with_refset", 
+  cores = 4, # Run with 4 cores
   verbose = FALSE
 )
 ```
