--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ remotes::install_github('selkamand/sigminerUtils')
 
 Load required packages
 
-```{r, eval = TRUE}
+```{r}
 library(sigminerUtils)
 ```
 
@@ -63,7 +63,7 @@ unlink("colo829_signature_results_with_refset", recursive = TRUE)
 
 ```
 
-```{r include=FALSE}
+```{r echo=TRUE, results='hide', message=FALSE, warning=FALSE}
 path_snvs <- system.file("colo829_testfiles/COLO829v003T.purple.somatic.vcf.gz", package = "sigminerUtils")
 path_cnvs <- system.file("colo829_testfiles/COLO829v003T.purple.cnv.somatic.tsv", package = "sigminerUtils")
 path_svs <-  system.file("colo829_testfiles/COLO829v003T.purple.sv.vcf.gz", package = "sigminerUtils")
@@ -131,7 +131,7 @@ sig_create_reference_set(
 
 Once a reference set has been produced, it can be used in any single sample / cohort analysis to produce additional outputs (umap_plot data + similar sample analysis)
 
-```{r include=FALSE}
+```{r echo = TRUE, results='hide', message=FALSE, warning=FALSE}
 path_snvs <- system.file("colo829_testfiles/COLO829v003T.purple.somatic.vcf.gz", package = "sigminerUtils")
 path_cnvs <- system.file("colo829_testfiles/COLO829v003T.purple.cnv.somatic.tsv", package = "sigminerUtils")
 path_svs <-  system.file("colo829_testfiles/COLO829v003T.purple.sv.vcf.gz", package = "sigminerUtils")
