feat: add support for annovar

--- a/README.Rmd
+++ b/README.Rmd
@@ -60,7 +60,8 @@ unlink("pcawg_signature_results", recursive = TRUE)
 unlink("colo829_signature_results", recursive = TRUE)
 unlink("pcawg_reference_set", recursive = TRUE)
 unlink("colo829_signature_results_with_refset", recursive = TRUE)
-
+unlink("annovar_sample", recursive = TRUE)
+unlink("signatures", recursive = TRUE)
 ```
 
 ```{r echo=TRUE, results='hide', message=FALSE, warning=FALSE}
@@ -158,5 +159,14 @@ sig_analyse_mutations_single_sample_from_files(
 sigstory = sigminer2sigstory(
   signature_folder = "colo829_signature_results_with_refset/COLO829v003T/"
 )
+```
+
+
+
+### TSV mutation inputs
+
+```{r}
+path_annovar <- system.file("annovar.hg38.txt", package = "sigminerUtils")
+sig_analyse_mutations_single_sample_from_files(sample_id = "annovar_sample", vcf_snv = path_annovar, small_variant_filetype = "tsv", verbose = FALSE)
 ```
 
